# reels-analyzer

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_SUMMARY.md  DOCKER.md  Dockerfile.backend  Dockerfile.frontend  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  assigment.txt  docker-compose.yml  main.py  nginx.conf  pyproject.toml  reels.db
back/api/: README.md  pyproject.toml
back/api/src/api/: auth.py  config.py  database.py  main.py  models.py  routes.py  schemas.py
back/processor/: README.md  pyproject.toml
back/processor/src/processor/: __init__.py  audio_extractor.py  downloader.py  tasks.py  text_analyzer.py  transcriber.py
back/tests/: pyproject.toml
back/tests/src/tests/: __init__.py  test_api.py  test_auth_flow.py  test_processor.py
front/: README.md  package-lock.json  package.json  pnpm-lock.yaml
front/src/: App.vue
front/src/__tests__/: TaskCard.spec.ts
front/src/components/: AddTaskModal.vue  TaskCard.vue  TranscriptModal.vue
front/src/router/: index.ts
front/src/services/: api.ts
front/src/stores/: auth.ts
front/src/views/: LoginView.vue  RegisterView.vue  TasksView.vue
