[project]
name = "reels-analyzer"
version = "0.1.0"
description = "Instagram Reel Processor - Download, transcribe and analyze Instagram reels"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "yt-dlp>=2024.12.0",
    "ffmpeg-python>=0.2.0",
    "openai-whisper>=20231117",
    "langdetect>=1.0.9",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "api",
    "processor",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "argon2-cffi>=25.1.0",
]

[tool.uv.sources]
api = { workspace = true }
processor = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]

[tool.uv.workspace]
members = [
    "back/api",
    "back/processor",
    "back/tests",
]
